--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/general-sans");
+@import url("https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -148,6 +149,46 @@ body {
   /*  footer */
   .social-icon {
     @apply w-12 h-12 rounded-full flex justify-center items-center bg-black-300 border border-black-200;
+  }
+}
+
+.name-logo {
+  font-family: "Tillana", system-ui;
+  font-weight: 700;
+  font-style: normal;
+  background-color: antiquewhite;
+  animation: switchColors 6s infinite ease-in-out;
+  transition: all 0.3s;
+}
+
+.name-logo:hover {
+  transform: scale(1.1) rotate(-5deg);
+}
+
+@keyframes switchColors {
+  0% {
+    background-color: darkorange;
+  }
+  15% {
+    background-color: aqua;
+  }
+  30% {
+    background-color: aquamarine;
+  }
+  40% {
+    background-color: hotpink;
+  }
+  55% {
+    background-color: chartreuse;
+  }
+  70% {
+    background-color: coral;
+  }
+  85% {
+    background-color: cornflowerblue;
+  }
+  100% {
+    background-color: fuchsia;
   }
 }
 
